test/sema/typeck/generic/arguments-mismatch-too-many.out
error: expected 1 type parameters but got 2.
--> arguments-mismatch-too-many.dora:3:14
 | class A[T]
 | fn foo() {
 |     let _a = A[Int32, Int32]();
                ~~~~~~~~~~~~~~~~~
 | }
 | 
1 error found.
