test/sema/typeck/generic/arguments-mismatch-too-many.dora
class A[T]
fn foo() {
    let _a = A[Int32, Int32]();
}
